@@ -5,7 +5,12 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
-2005-10-19 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+2005-10-20 Alexander M. Turek  <me@derrabus.de>
+    * libraries/mysql_charsets.lib.php: On MySQL 5.0.6, we don't have to parse
+      SHOW CREATE DATABASE anymore, if we just want to get to know a
+      database's default collation.
+
+2005-10-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * sql.php, footer.inc.php: refresh left frame on view creation
     * left.php: view icon for views
     * libraries/left.js: dropped
